--- a/pages/Treino A/treinoAstyles.css
+++ b/pages/Treino A/treinoAstyles.css
@@ -22,9 +22,10 @@ body {
     padding: 20px;
 }
 .exercicios {
-    border: 1px solid #b85d64;
+    background-color: #111;
+    border-radius: 5px;
     width: 100%;
-    max-width: 500px;
+    max-width: 450px;
     margin: auto;
 }
 
@@ -32,10 +33,7 @@ body {
     font-size: 18px;
     color: #d8cdcd;
     text-align: center;
-    text-transform: lowercase;
-}
-.exercicios h2::first-letter {
-    text-transform: uppercase;
+    margin-bottom: 15px;
 }
 
 .voltar-btn a {
