--- a/pages/Treino B/treinoBstyles.css
+++ b/pages/Treino B/treinoBstyles.css
@@ -22,9 +22,10 @@ body {
     padding: 20px;
 }
 .exercicios {
-    border: 1px solid #b85d64;
+    background-color: #111;
+    border-radius: 5px;
     width: 100%;
-    max-width: 500px;
+    max-width: 450px;
     margin: auto;
 }
 
